# Factor_Fingerprint

./: .gitignore  CODE_WIKI.md  CODE_WIKI_EN.md  README.md  README_EN.md  __init__.py  demo.py  pyproject.toml
core/: __init__.py  classifier.py  fingerprint.py  health.py  monitor.py  semantic.py  semantic_fusion.py
docs/: factor_prior_semantic_analysis.md  factor_rule_based_fingerprint.md  health_module_implementation_plan.md  nlp_rule_extraction_analysis.md  nlp_semantic_improvement.md
tests/: test_health_phase2.py  test_health_phase3.py  test_health_phase4.py  test_health_phase5.py  test_health_phase6.py  test_health_phase7.py  test_semantic_statistical_fusion.py
