[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-fingerprint"
version = "1.0.0"
description = "Factor Fingerprint - 因子指纹与语义理解模块"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["Factor_Fingerprint*"]
